--- a/tutorials/07 Stellar priors and limb darkening.ipynb
+++ b/tutorials/07 Stellar priors and limb darkening.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a default limb darkening, TLS uses the quadratic law with parameters a, b =[0.4804, 0.1867] from a sun-like G2V star. This was derived from the average transit curve (see paper Figure 2). Equivalently, we can plot the host star temperature of all known exoplanets. The mode of this distribution is ~5800 K, comparable to the sun: <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Catherine-de-medici.jpg/106px-Catherine-de-medici.jpg\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
