--- a/tutorials/01 Quick start with synthetic data.ipynb
+++ b/tutorials/01 Quick start with synthetic data.ipynb
@@ -39,7 +39,7 @@
     "time_start = 3.14\n",
     "data_duration = 100\n",
     "samples_per_day = 48\n",
-    "samples = int(data_duration * samples_per_day) # 48\n",
+    "samples = int(data_duration * samples_per_day)\n",
     "time = numpy.linspace(time_start, time_start + data_duration, samples)\n",
     "\n",
     "# Use batman to create transits\n",
@@ -88,31 +88,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transit Least Squares TLS 1.0.7 (04 January 2019)\n",
+      "Transit Least Squares TLS 1.0.16 (29 January 2019)\n",
       "Creating model cache for 37 durations\n",
-      "Searching 4800 data points, 10870 periods from 0.602 to 50.0 days, using all 8 CPU threads\n"
+      "Searching 4800 data points, 10870 periods from 0.602 to 50.0 days\n",
+      "Using all 8 CPU threads\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10870/10870 periods | 00:09<00:00 \n",
-      "  2%|▏         | 106/4800 [00:00<00:04, 1059.47it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Searching for best T0 for period 10.12473\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4800/4800 [00:00<00:00, 9357.04it/s]\n"
+      "100%|██████████| 10870/10870 periods | 00:09<00:00\n"
      ]
     }
    ],
@@ -142,7 +128,7 @@
       "9 transit times in time series: ['13.25629', '23.38102', '33.50575', '43.63048', '53.75521', '63.87994', '74.00467', '84.12940', '94.25413']\n",
       "Transit depth 0.99990\n",
       "Best duration (days) 0.18443\n",
-      "Signal detection efficiency (SDE): 27.077678397195754\n"
+      "Signal detection efficiency (SDE): 27.077678397195708\n"
      ]
     }
    ],
@@ -217,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's it! Now you start to play..."
+    "That's it! Now you can start to make your own tests."
    ]
   }
  ],
