--- a/tutorials/10 Measurement uncertainties.ipynb
+++ b/tutorials/10 Measurement uncertainties.ipynb
@@ -5,15 +5,18 @@
    "metadata": {},
    "source": [
     "## Using TLS with measurement uncertainties\n",
+    "\n",
+    "TLS is capable to use measurement uncertainties, if available, in its least-squares fit. \n",
+    "\n",
     "Every measured data point has its own measurement uncertainty (\"error\").\n",
     "\n",
     "- We here neglect uncertainties in time, as the time stamp of typical observations has millisecond accuracy. For 30min cadences, this error is then $\\approx 10^{-7}$.\n",
     "\n",
-    "- In terms of flux, however, even a perfect photometer will produce some noise. Fundamentally, this originates from the fact that photons (starlight) and electrons (detector) are quantized [Einstein 1905](https://ui.adsabs.harvard.edu/#abs/1905AnP...322..132E/abstract), so that only a finite number can be counted in a given time. This phenomenon is the shot noise [Schottky 1918](https://ui.adsabs.harvard.edu/#abs/1918AnP...362..541S/abstract), which is correlated with the brightness of the target. In practice, other noise sources add to this (e.g., instrumental imperfections and stellar variations). These sources are typically of order 10-100 ppm per 30 min cadence or more.\n",
+    "- In terms of flux, however, even a perfect photometer will produce some noise. Fundamentally, this originates from the fact that photons (starlight) and electrons (detector) are quantized [(Einstein 1905)](https://ui.adsabs.harvard.edu/#abs/1905AnP...322..132E/abstract), so that only a finite number can be counted in a given time. This phenomenon is the shot noise [(Schottky 1918)](https://ui.adsabs.harvard.edu/#abs/1918AnP...362..541S/abstract), which is correlated with the brightness of the target. In practice, other noise sources add to this (e.g., instrumental imperfections and stellar variations). These sources are typically of order 10-100 ppm per 30 min cadence or more.\n",
     "\n",
     "If all measurement uncertainties are equal (or can not be distinguished), no further treatment is required.\n",
     "\n",
-    "If information about non-uniform measurement uncertainties are available, they should be includes in the TLS fit. We here demonstrate their positive effect, using exaggerated noise fluctuations for clarity. In practice, fluctuations will often be less severe, so that the effect of including the estimates will be smaller.\n",
+    "If information about non-uniform measurement uncertainties are available, they should be included in the TLS fit. We here demonstrate their positive effect, using exaggerated noise fluctuations for clarity. In practice, fluctuations will often be less severe, so that the effect of including the estimates will be smaller.\n",
     "\n",
     "We start by creating synthetic data with uniform noise, and without measurement uncertainties:"
    ]
