--- a/tutorials/10 Measurement uncertainties.ipynb
+++ b/tutorials/10 Measurement uncertainties.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Using TLS with measurement uncertainties\n",
     "\n",
-    "TLS is capable to use measurement uncertainties, if available, in its least-squares fit. \n",
+    "TLS is capable of using measurement uncertainties, when available, in its least-squares fit. \n",
     "\n",
     "Every measured data point has its own measurement uncertainty (\"error\").\n",
     "\n",
