--- a/tutorials/02 Starter's guide - K2-3b, a red dwarf with a planet.ipynb
+++ b/tutorials/02 Starter's guide - K2-3b, a red dwarf with a planet.ipynb
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This looks pretty much like a planet! We have now reached the end of this tutorial. But there is more: This system contains (at least) two more planets! You can head to the tutorial section to learn more about TLS, or head to [part 2 of this tutorial](www.), where we hunt down the other planets using the feature ``transit_mask`` in TLS."
+    "This looks pretty much like a planet! We have now reached the end of this tutorial. But there is more: This system contains (at least) two more planets! You can head to the tutorial section to learn more about TLS, or head to [part 2 of this tutorial](https://github.com/hippke/tls/blob/master/tutorials/03%20Multiple%20planets%20-%20K2-3%2C%20a%20red%20dwarf%20with%203%20Super-Earths.ipynb), where we hunt down the other planets using the feature ``transit_mask`` in TLS."
    ]
   }
  ],
