--- a/tutorials/12 A comet from TESS Beta Pictoris data.ipynb
+++ b/tutorials/12 A comet from TESS Beta Pictoris data.ipynb
@@ -237,10 +237,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We conclude that TLS was able to spot the exocomet and assign it a period.\n",
-    "This is not a perfect example but it is a good showcase to show the TLS\n",
-    "capabilities to spot exocomets and also evaporating planets, whose transit\n",
-    "shapes are very similar."
+    "We conclude that TLS was able to spot the exocomet, even though the exocomet is\n",
+    "not really periodic and therefore the model depth was smaller than the real transit.\n",
+    "This is not a perfect example (we did not find a periodic exocomet yet in the\n",
+    "literature) but it is a good showcase to try the TLS capabilities to spot\n",
+    "exocomets and also evaporating planets, whose transit shapes should be very\n",
+    "similar."
    ],
    "metadata": {
     "collapsed": false,
