changed comets tutorial to be more illustrative.

--- a/tutorials/12 A comet-like transit from Kepler KIC 12557548 with TLS.ipynb
+++ b/tutorials/12 A comet-like transit from Kepler KIC 12557548 with TLS.ipynb
@@ -318,7 +318,7 @@
     "It seems that the cometary shape makes sense here. We conclude that TLS was able\n",
     "to spot the exoplanet with both methods.\n",
     "\n",
-    "Mathematically, we could conclude that the SNR and SDE were slightly better for the TLS default\n",
+    "Mathematically, we can see that the SNR and SDE were slightly better for the TLS default\n",
     "template. However, we can note that the residuals are better for the comet template.\n",
     "This is probably related to the comet-like template not being parameterizable (the\n",
     "ingress and egress shapes). If the ingress and egress parameters were fine-tuned, it'd\n",
