renamed comet to tailed.

--- a/tutorials/12 A comet-like transit from Kepler KIC 12557548 with TLS.ipynb
+++ b/tutorials/12 A comet-like transit from Kepler KIC 12557548 with TLS.ipynb
@@ -200,7 +200,7 @@
    ],
    "source": [
     "lcf = lk.search_lightcurvefile(\"KIC 12557548\", mission=\"Kepler\", cadence=\"short\", quarter=14).download_all()\n",
-    "power_args_comet = {'transit_template': 'comet', 'period_min': 0.5, 'period_max': 1, 'n_transits_min': 2, 'u': (0.701, 0.0462), 'R_star': 0.66, 'R_star_min': 0.606, 'R_star_max': 0.71400005, 'M_star': 0.666, 'M_star_min': 0.611, 'M_star_max': 0.73300004}\n",
+    "power_args_comet = {'transit_template': 'tailed', 'period_min': 0.5, 'period_max': 1, 'n_transits_min': 2, 'u': (0.701, 0.0462), 'R_star': 0.66, 'R_star_min': 0.606, 'R_star_max': 0.71400005, 'M_star': 0.666, 'M_star_min': 0.611, 'M_star_max': 0.73300004}\n",
     "pdcsap_flux_comet = lcf.PDCSAP_FLUX.stitch().remove_nans()\n",
     "model_comet = tls.transitleastsquares(pdcsap_flux_comet.time, pdcsap_flux_comet.flux)\n",
     "results_comet = model_comet.power(**power_args_comet)"
