fixing copied sentence

--- a/tutorials/13 Flares detection from TESS Proxima Centauri data.ipynb
+++ b/tutorials/13 Flares detection from TESS Proxima Centauri data.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# A comet from TESS Beta Pictoris with TLS\n",
+    "# Flares detection from TEES Proxima Centauri data\n",
     "We will use TLS to recover flares found in the Proxima Centauri\n",
     "light curves from TESS. We will download the curves thanks to the\n",
     "`lightkurve` package. Then, we will execute TLS with the known\n",
